[tool.poetry]
name = "poetry-docker"
version = "0.1.0"
description = ""
authors = ["ArrowIndustry <mak_yatani@arrow-sg.co.jp>"]

[tool.poetry.dependencies]
# httpstan = "^4.9.1"
pyro-ppl = "^1.8.2"
pygments = "^2.10.0"
python = "^3.10"
# pystan = "^2.18"
japanize-matplotlib = "^1.1.3"
jupyterlab = "^3.2.0"
matplotlib = "^3.5.1"
numpy = "^1.22.0"
pandas = "*"
polars = "*"
python-dotenv = "^0.19.2"
seaborn = "^0.11.2"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# my-script = "my_package.module:function"